# mate-3

./: justfile  pyproject.toml
cache/: worldometers.html
mate3/: __init__.py  cli.py
mate3/clases/: __init__.py
mate3/clases/clase_01/: __init__.py  main.py
mate3/core/: __init__.py  utils.py
src/: __init__.py  cli.py
src/clase_01/: __init__.py  main.py
src/clase_02/: __init__.py  main.py
src/clase_02/db/: actor.csv  autos.xlsx  gender.csv  ma.csv  movies.csv  pandas_vs_sql.db  salarios.csv
src/clase_03/: __init__.py  main.py
src/clase_04/: __init__.py  main.py  pop.csv
src/clase_05/: __init__.py  main.py
src/core/: main.py
tests/: __init__.py  test_clase_01.py  test_clase_02.py  test_clase_03.py  test_clase_04.py  test_clase_05.py
