[project]
name = "mate3"
version = "0.1.0"
description = "🧮 Template Moderno para Estudio de Matemáticas"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "bs4>=0.0.2",
  "lxml>=6.0.1",
  "matplotlib>=3.10.6",
  "networkx>=3.5",
  "numpy>=2.3.2",
  "pandas>=2.3.2",
  "polars>=1.32.2",
  "pytest>=8.4.1",
  "requests>=2.32.5",
  "rich>=13.7.0",
  "scipy>=1.16.2",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=4.0.0",
  "pytest-xdist>=3.3.0",
  "mypy>=1.8.0",
]

[project.scripts]
mate = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
  "slow: marks tests as slow",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["mate3"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
]
